--- a/business.html
+++ b/business.html
@@ -1,1 +1,68 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <title>Droniq | Business Page</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">function toggleAbout() {
+  const about = document.getElementById("aboutText");
+  about.style.visibility = (about.style.visibility === "hidden") ? "visible" : "hidden";
+}
+
+    <a class="navbar-brand fw-bold" href="#"><img src="https://iili.io/FQyteM7.png" alt="r-logo" border="0"width="50" height="50"> Droniq</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="index.html">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Business Intro -->
+<section class="bg-info text-white text-center p-4">
+  <p>Welcome to Droniq. Your all in one solution to everything drones. We don’t just fly drones, we create visual stories.</p>
+</section>
+
+<!-- Example Wireframe Screenshot -->
+<div class="container text-center my-4">
+  <h2 class="section-title">Wireframe Design</h2>
+  <img src="https://i.ibb.co/hxhQhNmb/droneiq.png" alt="droneiq" border="0" class="img-fluid border">
+</div>
+
+<!-- Color Palette & Fonts -->
+<div class="container my-4">
+  <div class="row text-center">
+    <div class="col-md-6">
+      <h4>Color Palette</h4>
+      <div class="color-box" style="background:#1E1E1E;"></div>
+      <div class="color-box" style="background:#00B2FF;"></div>
+      <div class="color-box" style="background:#39FF14;"></div>
+      <div class="color-box" style="background:#F3F4F6;"></div>
+      <div class="color-box" style="background:#FFFFFF;"></div>
+    </div>
+    <div class="col-md-6">
+      <h4>Fonts</h4>
+      <p style="font-family: 'Poppins';">Poppins Example</p>
+      <p style="font-family: 'Orbitron';">Orbitron Example</p>
+    </div>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
